<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sdcard_title">SD Card Required</string>
    <string name="sdcard_message">A mounted SD card is required to upload media</string>
    <string name="photo_picker_image_selected">,Selected</string>
    <string name="photo_picker_image_thumbnail_selected">Image selected</string>
    <string name="photo_picker_image_thumbnail_unselected">Image unselected</string>
    <string name="photo_picker_photo_or_video_title">Choose media</string>
    <string name="photo_picker_title">Choose photo</string>
    <string name="photo_picker_video_title">Choose video</string>
    <string name="media_uploading_default">Uploading media</string>
    <string name="media_empty_search_list">No media matching your search</string>
    <string name="media_empty_list">You don\'t have any media</string>
    <string name="cab_selected">%d selected</string>
    <string name="photo_picker_use_photo">Use this photo</string>
    <string name="photo_picker_use_video">Use this video</string>
    <string name="photo_picker_use_audio">Use this audio</string>
    <string name="photo_picker_use_media">Use this media</string>
    <string name="media_insert_failed_with_reason">Media insert failed: %s</string>
    <string name="media_insert_failed">Media insert failed.</string>
    <string name="media_picker_soft_ask_permissions_denied">Denied access to your photos. To fix this, edit your permissions and turn on %1$s.</string>
    <string name="photo_picker_soft_ask_label">We need permissions to access your photos</string>
    <string name="button_edit_permissions">Edit permissions</string>
    <string name="photo_picker_soft_ask_allow">Allow</string>
    <string name="permission_storage">Storage</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_microphone">Microphone</string>
    <string name="unknown">Unknown</string>
    <string name="confirm">Confirm</string>
    <string name="edit_photo_screen_title">Edit Photo</string>
    <string name="error_generic_network">A network error occurred. Please check your connection and try again.</string>
    <string name="pick_photo">Select photo</string>
    <string name="pick_video">Select video</string>
    <string name="pick_audio">Select audio</string>
    <string name="pick_media">Add image or video</string>
    <string name="pick_file">Add file</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading…</string>
    <string name="stock_media_picker_search_hint">Search free photo library</string>
    <string name="stock_media_picker_list_content_description">Photo library</string>
    <string name="button_preview">Preview</string>
    <string name="add_count">Add %d</string>
    <string name="cancel">Cancel</string>
    <item name="media_grid_item_ratio" type="string" format="string">4:3</item>
    <string name="photo_picker_image_thumbnail_content_description">Image Thumbnail</string>
    <string name="photo_picker_thumbnail_desc">Play video</string>
    <string name="permissions_denied_title">Permissions</string>
    <string name="permissions_denied_message">It looks like you turned off permissions required for this feature.&lt;br/&gt;&lt;br/&gt;To change this, edit your permissions and make sure &lt;strong&gt;%s&lt;/strong&gt; is enabled.</string>
    <string name="button_not_now">Not now</string>
</resources>